# LearingTogether

./: README.md  build.sh  color_palette  createdatabase.py  db.sqlite3  deldatabase.py  howto  pyproject.toml
authentication/: models.py  urls.py  views.py
authentication/migrations/: 0001_initial.py  0002_remove_user_email_user_username.py  0003_alter_user_table.py  0004_alter_user_table.py  0005_remove_user_id_user_id_user_alter_user_username.py  0006_alter_user_table.py  0007_user_email.py  0008_rename_id_user_user_id_user_user_last_login_and_more.py  0009_alter_user_id_user.py  0010_alter_user_table.py  0011_alter_user_id_user.py  0012_rename_id_user_user_user_id.py  0013_alter_user_user_id.py  0014_category.py  0015_alter_category_table.py  0016_alter_category_options.py  0017_favcategories.py  0018_userprofile.py  0019_alter_userprofile_picture.py  0020_course.py  0021_teachingunit_alter_userprofile_picture_tumaterials_and_more.py  0022_coursegrade.py  0023_userpayment.py  0024_courseowner.py  0025_alter_teachingunit_id_course.py  0026_alter_teachingunit_id_course_and_more.py  0027_onlinechat.py
learning/: settings.py  urls.py
media/materials/: Scrumbling_dictionary.txt  Scrumbling_dictionary_nOC2kDZ.txt
templates/authentication/: addcategory.html  addchat.html  addcourse.html  addmaterial.html  addunit.html  administrator.html  base.html  course.html  detailedcourse.html  editcourse.html  favcategories.html  index.html  mycourse_detail.html  mycourses.html  otherprofile.html  payment.html  signin.html  signup.html  userprofile.html
