[tool.poetry]
name = "learning-platform"
version = "1"
description = "Manzana learning platform project"
authors = ["Agnieszka <agnieszkagrzymska1412@gmail.com>"]
readme = "README.md"
packages = [{include = "learning_platform"}]

[tool.poetry.dependencies]
python = "^3.10"
dj-database-url = "^1.2.0"
psycopg2-binary = "^2.9.5"
whitenoise = {extras = ["brotli"], version = "^6.3.0"}
gunicorn = "^20.1.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
